syntax = "proto3";

package sphinx.v1;

option go_package = "github.com/NpoolPlatform/sphinx-service/message/npool";

import "google/api/annotations.proto";
import "google/protobuf/Empty.proto";

// 交易服务
service Trading {
	// 查询单个币种
	rpc GetCoinInfo (GetCoinInfoRequest) returns (CoinInfoRow) {
		option (google.api.http) = {
			get: "/v1/coin/single"
		};}
	// 查询全部币种
	rpc GetCoinInfos (GetCoinInfosRequest) returns (CoinInfoList) {
		option (google.api.http) = {
			get: "/v1/coin/list"
		};}
	// 创建账户
	rpc RegisterAccount (RegisterAccountRequest) returns (AccountAddress) {
		option (google.api.http) = {
			post: "/v1/account/register"
			body: "*"
		};}
	// 余额查询
	rpc GetBalance (GetBalanceRequest) returns (AccountBalance) {
		option (google.api.http) = {
			get: "/v1/account/balance"
		};}
	// 转账 / 提现
	rpc ApplyTransaction (ApplyTransactionRequest) returns (google.protobuf.Empty) {
		option (google.api.http) = {
			post: "/v1/account/transaction"
			body: "*"
		};}
	// // 签名服务接入点
	// rpc PortalSign (PortalSignInit) returns (IdentityProof) {}
	// // 代理服务接入点
	// rpc PortalWallet (PortalWalletInit) returns (IdentityProof) {}
	// 账户交易查询
	rpc GetTxJSON (GetTxJSONRequest) returns (AccountTxJSON) {
		option (google.api.http) = {
			get: "/v1/account/txjson"
		};}
	// 交易状态查询
	rpc GetInsiteTxStatus (GetInsiteTxStatusRequest) returns (GetInsiteTxStatusResponse) {
		option (google.api.http) = {
			get: "/v1/account/transaction"
		};}
}

// 钱包代理服务
service WalletProxy {
	/* 
		从RabbitMQ获取消息通知
		从MySQL拉取交易，以及交易的详细信息
		根据不同交易状态进行不同操作
		每步操作完成后同步更新数据库状态
		审核通过交易，调用离线签名
		离线签名后，交由钱包节点进行广播
		广播成功后获取到CID，更新数据库标记为完成
	*/
  // 交易状态查询
  rpc GetTxStatus (GetTxStatusRequest) returns (GetTxStatusResponse) {}
  // 余额查询
  rpc GetBalance (GetBalanceRequest) returns (AccountBalance) {}
}

// GetCoinInfo 参数
message GetCoinInfoRequest {
	int32 coin_id = 1;
}
// GetCoinInfos 参数
message GetCoinInfosRequest {
	repeated int32 coin_ids = 1;
}
// GetCoinInfo 返回
message CoinInfoRow {
	int32 id = 1;
	bool need_signinfo = 2; // 是否需要预签名信息
	string name = 3; // 币种名称：Filecoin
	string unit = 4; // 单位：FIL
}
// GetCoinInfos 返回
message CoinInfoList {
	repeated CoinInfoRow list = 1; // 返回对象，取list字段
}

// RegisterAccount 参数
message RegisterAccountRequest {
	int32 coin_id = 1;
	string uuid = 2; // user_id或与其绑定的唯一标识符
}
// RegisterAccount 返回
message AccountAddress {
	int32 coin_id = 1;
	string address = 2; // 创建的钱包地址
	string uuid = 3; // uuid将用于加密私钥，提高整体安全性
}

// GetBalance 参数
message GetBalanceRequest {
	int32 coin_id = 1;
	string address = 2; // 查询的钱包地址
	int64 timestamp_utc = 3; // 长整型时间戳
}
// GetBalance 返回
message AccountBalance {
	int32 coin_id = 1;
	string address = 2; // 查询的钱包地址
	int64 timestamp_utc = 3; // 长整型时间戳
	double amount_float64 = 4; // 不入库的参考金额
	uint64 amount_uint64 = 5; // 内部交互标准金额格式
}

// GetTxJSONRequest 参数
message GetTxJSONRequest {
	// 继承钱包节点基础功能，预留
	int32 coin_id = 1;
	string address = 2; // 要查询的钱包地址
	int64 timefrom_utc = 3; // 开始时间
	int64 timetill_utc = 4; // 结束时间
	int32 limit_n = 5; // 服务端限制返回条数
}
// GetTxJSONRequest 返回
message AccountTxJSON {
	string json = 1;
}

// GetInsiteTxStatus 参数
message GetInsiteTxStatusRequest {
	string transaction_id_insite = 1; // 站内交易ID
}

// GetInsiteTxStatus 返回
message GetInsiteTxStatusResponse {
	int32 coin_id = 1;
	double amount_float64 = 2; // 不入库的参考金额
	uint64 amount_uint64 = 3; // 内部交互标准金额格式
	string address_from = 4; // 发送方
	string address_to = 5; // 接收方
	string insite_tx_type = 6; // recharge, payment, withdraw, unknown
	string transaction_id_insite = 7; // 站内交易ID
	string transaction_id_chain = 8; // 公链交易ID（如有）
	string status = 9; // 为done则成功；全部状态："pending_review", "pending_process", "pending_signinfo", "pending_signaction", "pending_broadcast", "pending_confirm", "done", "rejected", "error", "error_expected"
	bool is_processing = 10; // 对应数据库中mutex
	int64 createtime_utc = 11; // 创建时间
	int64 updatetime_utc = 12; // 上次更新时间
	bool is_success = 13; // 便于调用方判断
	bool is_failed = 14; // 不success不fail就是pending了
}

// ApplyTransaction 参数
message ApplyTransactionRequest {
	int32 coin_id = 1;
	string transaction_id_insite = 2; // 站内交易ID
	string address_from = 3; // 发送方
	string address_to = 4; // 接收方
	double amount_float64 = 5; // 不入库的参考金额
	uint64 amount_uint64 = 6; // 内部交互标准金额格式
	string uuid_signature = 7; // 2FA的时效性验证码，前期可以留空
	int64 createtime_utc = 8; // 用户提交请求时的时间戳，与2FA绑定
}

// // PortalSignInit 参数
// message PortalSignInit {
// 	int32 coin_id = 1;
// 	string uuid = 2; // 机器标识符
// }

// // PortalWalletInit 参数
// message PortalWalletInit {
// 	int32 coin_id = 1;
// 	string uuid = 2; // 机器标识符
// 	string location = 3; // 硬件所在地点（看板用到的节点信息，下同）
// 	string host_vendor = 4; // 硬件供应商
// 	string mac_address = 5; // MAC地址
// 	string public_ip = 6; // 公网ip，也可能没有
// 	string local_ip = 7; // 内网ip
// 	int64 timestamp_utc = 8; // 汇报时间
// }

// GetTxStatus 参数
message GetTxStatusRequest {
  string transaction_id_chain = 1;
}

// GetTxStatus 返回
message GetTxStatusResponse {
  double amount_float64 = 1; // 不入库的参考金额
  uint64 amount_uint64 = 2; // 内部交互标准金额格式
  string address_from = 3; // 发送方
  string address_to = 4; // 接收方
  string transaction_id_chain = 5; // 公链交易ID
  int64 createtime_utc = 6; // 创建时间
  int64 updatetime_utc = 7; // 上次更新时间
  bool is_success = 8; // 便于调用方判断
  bool is_failed = 9; // 不success不fail就是pending了
  int32 num_blocks_confirmed = 10; // 已确认区块数
}

service ServiceExample {
	// Method Version
	rpc Version (google.protobuf.Empty) returns (VersionResponse){
		option (google.api.http) = {
			post: "/version"
			body: "*"
		};
	}
}

// request body and response
message VersionResponse {
		string Info = 100;
}
























